# sparsha

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.mjs  roadmap.md
.github/workflows/: ci.yml  release-readiness.yml  showcase-pages.yml
crates/spark/: Cargo.toml
crates/spark-core/src/: lib.rs  pipeline.rs  types.rs  vertex.rs  wgpu_init.rs
crates/spark-input/src/: events.rs  focus.rs  hit_test.rs  lib.rs
crates/spark-layout/src/: lib.rs  tree.rs
crates/spark-render/src/: commands.rs  lib.rs  renderer.rs  shape_pass.rs  text_pass.rs
crates/spark-signals/: Cargo.toml
crates/spark-signals/src/: lib.rs
crates/spark-text/src/: system.rs
crates/spark-widgets/: Cargo.toml
crates/spark-widgets/src/: button.rs  checkbox.rs  container.rs  context.rs  draw_surface.rs  lib.rs  list.rs  scroll.rs  test_helpers.rs  text.rs  text_input.rs  widget.rs
crates/spark-widgets/tests/: paint_tests.rs
crates/spark/src/: app.rs  dom_renderer.rs  lib.rs  tasks.rs  web.rs  web_app.rs  web_surface_manager.rs  web_text_metrics.rs
crates/sparsh/: Cargo.toml
crates/sparsh-core/: Cargo.toml
crates/sparsh-core/src/: buffer.rs  lib.rs
crates/sparsh-input/: Cargo.toml
crates/sparsh-input/src/: action.rs  events.rs  focus.rs  hit_test.rs  lib.rs
crates/sparsh-layout/: Cargo.toml
crates/sparsh-layout/src/: lib.rs  tree.rs
crates/sparsh-render/: Cargo.toml
crates/sparsh-render/src/: commands.rs  lib.rs  renderer.rs  shape_pass.rs  text_pass.rs
crates/sparsh-signals/: Cargo.toml
crates/sparsh-signals/src/: lib.rs
crates/sparsh-text/: Cargo.toml
crates/sparsh-text/src/: lib.rs  system.rs
crates/sparsh-widgets/: Cargo.toml
crates/sparsh-widgets/src/: accessibility.rs  button.rs  checkbox.rs  container.rs  context.rs  control_state.rs  draw_surface.rs  for_each.rs  into_widget.rs  lib.rs  list.rs  scroll.rs  scroll_model.rs  semantics.rs  test_helpers.rs  text.rs  text_area.rs  text_editor.rs  text_input.rs  theme.rs  widget.rs
crates/sparsh-widgets/tests/: paint_tests.rs
crates/sparsh/src/: accessibility.rs  app.rs  component.rs  dom_renderer.rs  lib.rs  router.rs  runtime_widget.rs  tasks.rs  web.rs  web_app.rs  web_surface_manager.rs
crates/sparsh/tests/: readme_example.rs
crates/sparsha/: Cargo.toml
crates/sparsha-core/: Cargo.toml
crates/sparsha-core/src/: lib.rs  types.rs  wgpu_init.rs
crates/sparsha-input/: Cargo.toml
crates/sparsha-input/src/: action.rs  events.rs  focus.rs  hit_test.rs  lib.rs
crates/sparsha-layout/: Cargo.toml
crates/sparsha-layout/src/: lib.rs  tree.rs
crates/sparsha-render/: Cargo.toml
crates/sparsha-render/src/: commands.rs  lib.rs  renderer.rs  shape_pass.rs  text_pass.rs
crates/sparsha-signals/: Cargo.toml
crates/sparsha-signals/src/: lib.rs
crates/sparsha-text/: Cargo.toml
crates/sparsha-text/src/: atlas.rs  lib.rs  metrics_backend.rs  system.rs
crates/sparsha-widgets/: Cargo.toml
crates/sparsha-widgets/src/: animation.rs  app_shell.rs  button.rs  checkbox.rs  container.rs  context.rs  control_state.rs  draw_surface.rs  for_each.rs  into_widget.rs  layout_helpers.rs  lib.rs  list.rs  provider.rs  scroll.rs  scroll_model.rs  semantics.rs  test_helpers.rs  text.rs  text_area.rs  text_editor.rs  text_editor_widget.rs  text_input.rs  theme.rs  viewport.rs  widget.rs
crates/sparsha-widgets/tests/: paint_tests.rs
crates/sparsha/src/: accessibility.rs  app.rs  component.rs  dom_renderer.rs  lib.rs  router.rs  runtime_core.rs  runtime_widget.rs  tasks.rs  web.rs  web_app.rs  web_surface_manager.rs
crates/sparsha/src/platform/: events.rs  mod.rs  native.rs  web.rs
crates/sparsha/src/tasks_backend/: mod.rs  native.rs  web.rs
crates/sparsha/tests/: component_surface.rs  public_surface_audit.rs  readme_example.rs
docs/: api-surface.md  release-checklist.md
docs/plans/: 2026-01-28-examples-implementation.md  2026-01-28-examples-redesign.md  2026-01-28-rename-sikhar-to-sparsh.md  2026-01-28-scroll-transformation.md
examples/: README.md
examples/counter/: Cargo.toml  Trunk.toml  index.html  sparsha-worker.js
examples/counter/src/: main.rs
examples/fractal-clock/: Cargo.toml  Trunk.toml  index.html
examples/fractal-clock/src/: main.rs
examples/hybrid-overlay/: Cargo.toml  Trunk.toml  index.html
examples/hybrid-overlay/src/: main.rs
examples/kitchen-sink/: Cargo.toml  index.html
examples/kitchen-sink/src/: main.rs
examples/layout-probe/: Cargo.toml  Trunk.toml  index.html  sparsha-worker.js
examples/layout-probe/src/: main.rs
examples/showcase/: Cargo.toml  Trunk.toml  index.html  sparsha-worker.js
examples/showcase/src/: main.rs
examples/todo/: Cargo.toml  Trunk.toml  index.html
examples/todo/scripts/: lighthouse-local.sh
examples/todo/src/: main.rs
scripts/: mobile-run-example.sh  perf-smoke.sh  release-readiness.sh  verify-foundation.sh  wasm-browser-tests.sh  web-build-all.sh  web-build-example.sh  web-perf-smoke.sh  web-serve-dist.sh  web-smoke.sh
tests/playwright/: counter.spec.ts  hybrid-overlay.spec.ts  kitchen-sink.spec.ts  layout-probe.spec.ts  showcase.spec.ts  todo.spec.ts
