[workspace]
members = [
    "crates/spark-core",
    "crates/spark-render",
    "crates/spark-layout",
    "crates/spark-text",
    "crates/spark-input",
    "crates/spark-signals",
    "crates/spark-widgets",
    "crates/spark",
    "examples/kitchen-sink",
    "examples/todo",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
winit = "0.31.0-beta.2"
wgpu = { version = "29.0.0", features = ["webgl"] }
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"

# Math
glam = "0.32.1"

# Layout
taffy = "0.9.2"

# Text
parley = "0.7.0"
swash = "0.2.6"

# Utilities
slotmap = "1.1.1"
rustc-hash = "2.1.1"
generational-box = "0.7.3"

# Input events
ui-events = "0.3.0"
ui-events-winit = "0.3.0"

# Accessibility
accesskit = "0.24.0"
accesskit_winit = "0.32.2"

# Internal crates
spark-core = { path = "crates/spark-core" }
spark-render = { path = "crates/spark-render" }
spark-layout = { path = "crates/spark-layout" }
spark-text = { path = "crates/spark-text" }
spark-input = { path = "crates/spark-input" }
spark-signals = { path = "crates/spark-signals" }
spark-widgets = { path = "crates/spark-widgets" }

# Web dependencies (add to workspace.dependencies for individual crates)
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
    "Window",
    "Document",
    "Element",
    "Event",
    "CustomEvent",
    "Node",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "EventTarget",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
] }
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
