[workspace]
members = [
    "crates/sparsh-core",
    "crates/sparsh-render",
    "crates/sparsh-layout",
    "crates/sparsh-text",
    "crates/sparsh-input",
    "crates/sparsh-signals",
    "crates/sparsh-widgets",
    "crates/sparsh",
    "examples/fractal-clock",
    "examples/hybrid-overlay",
    "examples/kitchen-sink",
    "examples/todo",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
winit = "0.30.12"
wgpu = { version = "29.0.0", features = ["webgl"] }
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
arboard = "3.6.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"

# Math
glam = "0.32.1"

# Layout
taffy = "0.9.2"

# Text
parley = "0.7.0"
swash = "0.2.6"

# Utilities
slotmap = "1.1.1"
rustc-hash = "2.1.1"
generational-box = "0.7.3"

# Input events
ui-events = "0.3.0"
ui-events-winit = "0.3.0"

# Accessibility
accesskit = "0.24.0"
accesskit_winit = "0.32.2"

# Internal crates
sparsh-core = { path = "crates/sparsh-core" }
sparsh-render = { path = "crates/sparsh-render" }
sparsh-layout = { path = "crates/sparsh-layout" }
sparsh-text = { path = "crates/sparsh-text" }
sparsh-input = { path = "crates/sparsh-input" }
sparsh-signals = { path = "crates/sparsh-signals" }
sparsh-widgets = { path = "crates/sparsh-widgets" }

# Web dependencies (add to workspace.dependencies for individual crates)
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
    "Window",
    "Location",
    "Navigator",
    "Document",
    "Element",
    "Event",
    "ErrorEvent",
    "CustomEvent",
    "Node",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "DomRect",
    "EventTarget",
    "MessageEvent",
    "Worker",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "InputEvent",
    "ClipboardEvent",
    "DataTransfer",
    "CompositionEvent",
] }
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
