[workspace]
members = [
    "crates/sparsha-core",
    "crates/sparsha-render",
    "crates/sparsha-layout",
    "crates/sparsha-text",
    "crates/sparsha-input",
    "crates/sparsha-signals",
    "crates/sparsha-widgets",
    "crates/sparsha",
    "examples/fractal-clock",
    "examples/hybrid-overlay",
    "examples/kitchen-sink",
    "examples/showcase",
    "examples/todo",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
winit = "0.30.12"
wgpu = { version = "29.0.0", features = ["webgl"] }
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
arboard = "3.6.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"

# Math
glam = "0.32.1"

# Layout
taffy = "0.9.2"

# Text
parley = "0.7.0"
swash = "0.2.6"

# Utilities
slotmap = "1.1.1"
rustc-hash = "2.1.1"
generational-box = "0.7.3"

# Input events
ui-events = "0.3.0"
ui-events-winit = "0.3.0"

# Accessibility
accesskit = "0.24.0"
accesskit_winit = "0.32.2"

# Internal crates
sparsha-core = { path = "crates/sparsha-core" }
sparsha-render = { path = "crates/sparsha-render" }
sparsha-layout = { path = "crates/sparsha-layout" }
sparsha-text = { path = "crates/sparsha-text" }
sparsha-input = { path = "crates/sparsha-input" }
sparsha-signals = { path = "crates/sparsha-signals" }
sparsha-widgets = { path = "crates/sparsha-widgets" }

# Web dependencies (add to workspace.dependencies for individual crates)
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
wasm-bindgen-test = "0.3.54"
web-sys = { version = "0.3.91", features = [
    "Window",
    "Location",
    "Navigator",
    "Document",
    "Element",
    "Event",
    "ErrorEvent",
    "CustomEvent",
    "Node",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "DomRect",
    "EventTarget",
    "MessageEvent",
    "Worker",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WheelEvent",
    "KeyboardEvent",
    "InputEvent",
    "ClipboardEvent",
    "DataTransfer",
    "CompositionEvent",
] }
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
