[package]
name = "spark-widgets"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
spark-core = { path = "../spark-core" }
spark-layout = { path = "../spark-layout" }
spark-input = { path = "../spark-input" }
spark-text = { path = "../spark-text" }
spark-render = { path = "../spark-render" }
taffy = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }

[dev-dependencies]
spark-core = { path = "../spark-core" }
spark-input = { path = "../spark-input" }
spark-layout = { path = "../spark-layout" }
spark-render = { path = "../spark-render" }
spark-text = { path = "../spark-text" }
pollster = { workspace = true }
