[package]
name = "spark"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A GPU-first cross-platform UI framework"

[dependencies]
spark-core = { workspace = true }
spark-render = { workspace = true }
spark-layout = { workspace = true }
spark-text = { workspace = true }
spark-input = { workspace = true }
spark-signals = { workspace = true }
spark-widgets = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = "1.0"
web-time = "1.1"
serde-wasm-bindgen = { workspace = true }
