[package]
name = "sparsh-widgets"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sparsh-core = { path = "../sparsh-core" }
sparsh-layout = { path = "../sparsh-layout" }
sparsh-input = { path = "../sparsh-input" }
sparsh-text = { path = "../sparsh-text" }
sparsh-render = { path = "../sparsh-render" }
taffy = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }

[dev-dependencies]
sparsh-core = { path = "../sparsh-core" }
sparsh-input = { path = "../sparsh-input" }
sparsh-layout = { path = "../sparsh-layout" }
sparsh-render = { path = "../sparsh-render" }
sparsh-text = { path = "../sparsh-text" }
pollster = { workspace = true }
