[package]
name = "sparsha"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A GPU-first cross-platform UI framework"

[dependencies]
sparsha-core = { workspace = true }
sparsha-render = { workspace = true }
sparsha-layout = { workspace = true }
sparsha-text = { workspace = true }
sparsha-input = { workspace = true }
sparsha-signals = { workspace = true }
sparsha-widgets = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
arboard = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = "1.0"
web-time = "1.1"
serde-wasm-bindgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
