[package]
name = "fractal-clock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fractal-clock"
path = "src/main.rs"

[dependencies]
sparsha = { path = "../../crates/sparsha" }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1"
